examples/ex3/test_cases/failing/check20_println_is_called_ref_value.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class A {

}

class Simple {
    A bar;

    bar = new A()

    public int func() {
        System.out.println(bar);

        return 0;
    }
}